Bug 1514464 - Clamp selection color value between 0 and 255 in nsLookAndFeel.mm. r=mstange a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D14676